# librarian

./: .gitignore  Cargo.toml  README.md
crates/librarian-cli/: Cargo.toml
crates/librarian-cli/src/: main.rs
crates/librarian-collectors/: Cargo.toml
crates/librarian-collectors/src/: aur.rs  lib.rs  pacman.rs  pacman_common.rs  path.rs  util.rs
crates/librarian-collectors/src/collectors/: cargo.rs  conda.rs  desktop.rs  docker.rs  extra_paths.rs  foundry.rs  mod.rs  npm.rs  pip.rs  pipx.rs  rpm.rs  rustup.rs  sagemath.rs  uv.rs
crates/librarian-core/: Cargo.toml
crates/librarian-core/src/: category.rs  lib.rs  schema.sql  source.rs  store.rs  tool.rs
crates/librarian-enrichment/: Cargo.toml
crates/librarian-enrichment/src/: client.rs  lib.rs  service.rs
scripts/: install.sh
system/config-templates/: README.md  env.example  sources.toml
system/pacman-hook/: librarian.hook
system/shell-wrappers/: librarian-wrappers.sh
