[workspace]
resolver = "2"
members = [
    "crates/librarian-core",
    "crates/librarian-collectors",
    "crates/librarian-enrichment",
    "crates/librarian-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Protocol-X <protocolx@hackermail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Protocol-X/librarian"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
clap = { version = "4", features = ["derive", "env"] }
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
dotenvy = "0.15"
regex = "1"
once_cell = "1"
nix = { version = "0.29", features = ["user", "signal"] }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
