[package]
name = "librarian-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Librarian CLI: discover, search, describe, and enrich tools across every package manager on the system."

[[bin]]
name = "librarian"
path = "src/main.rs"

[dependencies]
librarian-core = { path = "../librarian-core" }
librarian-collectors = { path = "../librarian-collectors" }
librarian-enrichment = { path = "../librarian-enrichment" }
anyhow.workspace = true
clap.workspace = true
rusqlite.workspace = true
nix.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true

[lints]
workspace = true
