[package]
name = "librarian-collectors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Per-source collectors that discover installed tools across package managers."

[dependencies]
librarian-core = { path = "../librarian-core" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
walkdir.workspace = true
chrono.workspace = true
tracing.workspace = true
regex.workspace = true
once_cell.workspace = true
nix.workspace = true

[lints]
workspace = true
