[package]
name = "librarian-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types, store, and traits for the Librarian system tool index."

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
chrono.workspace = true
tracing.workspace = true

[lints]
workspace = true
